clasess and shii

--- a/public/index.html
+++ b/public/index.html
@@ -36,8 +36,9 @@
         </div>
         <button>Add</button>
       </form>
+      <a href="www.google.com">google</a>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
