--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,6 @@
       <a href="www.google.com">google</a>
     </footer>
 
-    <script src="app.js"></script>
+    <script type="module" src="app.js"></script>
   </body>
 </html>
